fix: allow scrolling when overflow

--- a/client/src/styles/theme.css
+++ b/client/src/styles/theme.css
@@ -137,6 +137,9 @@
     margin: 0;
     min-width: 320px;
     min-height: 100vh;
+  }
+
+  body.game-active {
     overflow: hidden;
   }
 
